<resources>
    <string name="app_name">Foodzzy</string>

    <string name="preferences_file_name">food_runner_preferences</string>
    <string name="content_app_logo">App Logo</string>
    <string name="mobile_number_hint">Mobile Number(10 digits)</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="register_hint"><u>Don\'t have an account?\nSign up now</u></string>
    <string name="registration_activity_title">Register Yourself</string>
    <string name="name_hint">Name(Min. 3 characters)</string>
    <string name="email_address_hint">Email Address</string>
    <string name="delivery_address_hint">Delivery Address</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="password_hint_long">Password(Min. 4 characters)</string>
    <string name="register_button_text">Register</string>
    <string name="forgot_password_instruction">Enter your registered mobile number and email below:</string>
    <string name="next_button_text">Next</string>
    <string name="log_out_button_text">Log Out</string>
    <string name="welcome_string">Welcome</string>
    <string name="home_menu_title">Home</string>
    <string name="profile_menu_title">My Profile</string>
    <string name="favourites_menu_title">Favorite Restaurants</string>
    <string name="history_menu_title">Order History</string>
    <string name="faq_menu_title">FAQs</string>
    <string name="log_out_menu_title">Log out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="rupee_icon_attribution">Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></string>

    <string name="restaurant_image_content_desc">Restaurant Image</string>
    <string name="favourite_button_content_desc">Add to favourites</string>
    <string name="no_favourite_restaurants">You have no favourite restaurants. Add some favourite restaurants to view here.</string>
    <string name="no_favourites">No favourites</string>

    <string name="mobile_number_template">+91-%s</string>
    <string name="question_template">Q.%d. %s</string>
    <string name="answer_template">Answer: %s</string>
    <string name="order_item_icon_content_description">Order Item Icon</string>
    <string name="total">Total:</string>
    <string name="no_orders_made">You haven\'t ordered anything yet. Order some delicious foods.</string>
    <string name="previous_order_header">Your previous orders:</string>
    <string name="order_history_menu_title">Order History</string>
    <string name="btn_text_add">Add</string>
    <string name="btn_text_remove">Remove</string>
    <string name="restaurant_details_header">Choose from the menu listed below:</string>
    <string name="error_string">Some unexpected error occurred. Try again later.</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="place_order_btn">Place Order</string>
    <string name="ordering_from_template">Ordering from: %s</string>
    <string name="total_cost_template">Total:\n%d</string>
    <string name="order_placed_successfully">Order Placed successfully.</string>
    <string name="go_to_dashboard">Go to Dashboard</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="empty_cart_string">Your Cart is empty. Add some delicious foods here.</string>
    <string name="unexpected_error">Some unexpected error occurred. Retry later.</string>
    <string name="login_header_text">Login</string>
    <string name="register_header_text">Register</string>
    <string name="reset_password_header">Reset Password</string>
    <string name="sort_action_title">Sort</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="reset_password_instruction">Enter OTP received in mail and create a new password</string>
</resources>