<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_menu_title" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile_menu_title" />

        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_favourite"
            android:title="@string/favourites_menu_title" />

        <item
            android:id="@+id/order_history"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history_menu_title"/>

        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq_menu_title" />

        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_out_menu_title" />
    </group>
</menu>