<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@drawable/background"
        android:scaleX="2"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/elevation_default">

        <ImageView
            android:id="@+id/imgAppLogo"
            android:layout_width="@dimen/logo_width_small"
            android:layout_height="@dimen/logo_height_small"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_x_large"
            android:layout_marginBottom="@dimen/margin_x_large"
            android:contentDescription="@string/content_app_logo"
            android:src="@drawable/foodiction_edited" />

        <TextView
            android:id="@+id/txtInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgAppLogo"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/forgot_password_instruction"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_default" />


        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtInstructions"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_default"
            android:background="@color/white"
            android:hint="@string/mobile_number_hint"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="@dimen/padding_large"
            tools:ignore="AutoFill" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etMobileNumber"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_default"
            android:background="@color/white"
            android:hint="@string/email_address_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/padding_large"
            tools:ignore="AutoFill" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etEmail"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_default"
            android:background="@color/secondaryColor"
            android:backgroundTint="@color/secondaryColor"
            android:text="@string/next_button_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/text_size_default" />
    </RelativeLayout>

</RelativeLayout>
