<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_large">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMobileNumber"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_small"
        android:padding="@dimen/padding_small"
        app:hintAnimationEnabled="true"
        app:startIconDrawable="@drawable/ic_mobile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number_hint"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="@dimen/padding_large" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilMobileNumber"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_default"
        android:padding="@dimen/padding_small"
        app:hintAnimationEnabled="true"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:padding="@dimen/padding_large"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilPassword"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/login_button_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_default" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_large"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_default" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtForgotPassword"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_x_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:text="@string/register_hint"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_default" />

</RelativeLayout>