<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.OrderHistoryFragment">

    <TextView
        android:id="@+id/txtPreviousOrderHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:padding="@dimen/padding_small"
        android:text="@string/previous_order_header"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_default" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/txtPreviousOrderHeader"
        android:background="@android:color/darker_gray" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerOrderHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        android:padding="@dimen/padding_small"
        tools:listitem="@layout/order_history_item" />

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/emptyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_above="@id/txtNoFavourites"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_corner_background"
            android:contentDescription="@string/no_favourites"
            android:src="@drawable/ic_order_item" />

        <TextView
            android:id="@+id/txtNoFavourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/margin_small"
            android:padding="@dimen/padding_default"
            android:text="@string/no_orders_made"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_default" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/errorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="visible">

        <ImageView
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_above="@id/txtError"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_corner_background"
            android:contentDescription="@string/error"
            android:src="@drawable/ic_error" />

        <TextView
            android:id="@+id/txtError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/margin_small"
            android:padding="@dimen/padding_default"
            android:text="@string/unexpected_error"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_default" />

    </RelativeLayout>

</RelativeLayout>